Pushed the latest code of branch 'open_source_version' from gitlab to github.